# docs/swagger.json
@@ -199,19 +199,13 @@
                 ],
                 "description": "Create a new tender and optionally upload a PDF",
                 "consumes": [
-                    "multipart/form-data"
+                    "application/json"
                 ],
                 "tags": [
                     "tenders"
                 ],
                 "summary": "Create a new tender",
                 "parameters": [
-                    {
-                        "type": "file",
-                        "description": "Upload PDF",
-                        "name": "pdf",
-                        "in": "formData"
-                    },
                     {
                         "description": "Tender data",
                         "name": "data",
@@ -565,22 +559,9 @@
         },
         "entity.CreateTenderRequest": {
             "type": "object",
-            "required": [
-                "budget",
-                "client_id",
-                "deadline",
-                "description",
-                "title"
-            ],
             "properties": {
                 "budget": {
                     "type": "number"
-                },
-                "client_id": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
                 },
                 "deadline": {
                     "type": "string"
@@ -588,13 +569,8 @@
                 "description": {
                     "type": "string"
                 },
-                "file_attachment": {
-                    "type": "string"
-                },
                 "title": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 3
+                    "type": "string"
                 }
             }
         },
@@ -672,6 +648,9 @@
                     "type": "number"
                 },
                 "client_id": {
+                    "type": "string"
+                },
+                "created_at": {
                     "type": "string"
                 },
                 "deadline": {
